Реализовано для мастера: показ и отклик на заявки, для клиента: выбор мастера. Добавлена новая таблица State. Добавлен файл data.sql для добавления стартовых значений для таблиц types, states, powers.

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -50,3 +50,9 @@ footer {
         height: auto;
     }
 }
+
+.app-row:hover {
+    background: #48c0f3; /* Цвет фона при наведении */
+    color: #fff; /* Цвет текста при наведении */
+    cursor: pointer;
+}
